--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,3 +78,23 @@ spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+
+# wk
+
+wk.image.command=d:/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.storage=d:/work/data/wk-images
+
+
+#qiniu
+qiniu.key.access=DuhKLqs3s86PVeEChR1aMAIY2RmCYpkOLlMpg9Y5
+qiniu.key.secret=zHrZ7aABusNcE9rBucwZSGNh-GKrIAqSR6yhqcas
+qiniu.bucket.header.name=cillian-community-header
+qiniu.bucket.header.url=http://rhl2t8a1o.hb-bkt.clouddn.com
+qiniu.bucket.share.name=cillian-community-share
+qiniu.bucket.share.url=http://rhl22g0fb.hb-bkt.clouddn.com
+
+# caffeine
+
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
